# dataset-tools

./: .gitignore  CMakeLists.txt  LICENCES.txt  README.md  build.sh  log2Ply.jl  overwrite_timestamps.jl  trajectoryViewer.jl
automatisation/: cofusion.jl  eval-iou.awk  eval-iou.gp  merge-pdfs.jl
blender/: geometry.py  get_calibration.py  get_features2d.py  io_export_pose.py  readme.md  render_random.py  render_turntable.py  renderer_trajectory.py  utils_calib.py  utils_calib_test.blend  utils_common.py  utils_datasets.py  utils_material.py  utils_mesh.py  utils_nodes.py  utils_pose.py  utils_scene.py
blender/v269-v279/: io_export_pose.py  render_turntable.py  utils_calib.py
common/: common.cpp  common.h  common_3d.cpp  common_3d.h  common_dataset.h  common_filesystem.h  common_image.h  common_input.h  common_labels.cpp  common_labels.h  common_macros.h  common_random.h  common_strings.h  common_types.h  connected_labels.cpp  connected_labels.h
convert_depth/: CMakeLists.txt  main.cpp
convert_exrToRgb/: CMakeLists.txt  main.cpp
convert_imagesToKlg/: CMakeLists.txt  main.cpp
convert_klg/: CMakeLists.txt  main.cpp
convert_masks/: CMakeLists.txt  main.cpp
convert_motivToTUM/: CMakeLists.txt  main.cpp
convert_poses/: CMakeLists.txt  main.cpp
convert_scannet_sens/: CMakeLists.txt  extract.cpp  test-sequences.cpp  viewer.cpp
evaluate_rgbd_camera/: CMakeLists.txt  main.cpp
evaluate_segmentation/: CMakeLists.txt  main.cpp
generate_trajectory/: CMakeLists.txt  main.cpp
green_screener/: CMakeLists.txt  main.cpp
label_associator/: CMakeLists.txt  main.cpp
label_finder/: CMakeLists.txt  main.cpp
label_merger/: CMakeLists.txt  main.cpp
merge_exr/: CMakeLists.txt  main.cpp
